# gaia

./: .eslintrc.json  .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  README.md  architecture-viewer.html  architecture.json  index.js  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: README.md  cloud-troubleshooter.md  developer.md  gaia-operator.md  gaia-orchestrator.md  gaia-planner.md  gaia-system.md  gaia-verifier.md  gitops-operator.md  platform-architect.md  terraform-architect.md
commands/: README.md  scan-project.md
config/: README.md  universal-rules.json
evidence/: AC-1.txt  AC-2.txt  AC-3.txt  AC-4.txt  AC-5.txt
gaia/: hooks_build.py  project.py
git-hooks/: commit-msg
hooks/: README.md  elicitation_result.py  hooks.json  post_compact.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_end_hook.py  session_start.py  stop_hook.py  subagent_start.py  subagent_stop.py  task_completed.py  user_prompt_submit.py
scripts/: bootstrap_database.py  bootstrap_database.sh  build-plugin.py  check-py39-compat.py  check_hooks_drift.py  check_schema_drift.py  release-prepare.mjs  seed_agent_permissions.py
skills/: README.md  reference.md
templates/: README.md
tests/: README.md  conftest.py  promptfoo.yaml  test_cross_layer_consistency.py  test_evidence_update_contracts.py  test_scheduled_tasks.py  test_smoke_hook_pipeline.py  test_state_machine_permissions.py  test_verifier_agent_registry.py  test_verifier_e2e.py  test_verifier_registry.py  test_writer_episode_retention.py  (+5 more)
(+610 files in other folders)
